# rustonic

./: .gitignore  Cargo.toml  README.md  index.html
css/: album_list.css  artist_tab.css  button.css  default.css  main_list.css  player.css  queue.css
src/: data_types.rs  event_bus.rs  lib.rs  main.rs
src/components/: album_list.rs  artist_tab.rs  button.rs  main_list.rs  mod.rs  player.rs  queue.rs
