[package]
name = "rustonic"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "4.0.1"
yew = "0.19.3"
yew-agent = "0.1.0"
gloo-utils = "0.1.2"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'HtmlMediaElement',
]
